Thu Jul 31 16:46:58 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Clicking the Conversations button should no longer be able to
	    segfault.

Thu Jul 31 13:30:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Alternative package names for glib2 are now supported.

Thu Jul 31 08:29:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Clicking Send when there's nothing in the entry field no longer
	    crashes.
	  - The last character of an outgoing message isn't cut off anymore.

Thu Jul 31 08:07:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Raise the conversation window when starting a new conversation
	    with a user from your buddy list.

	* src/QGaimConvWindow.cpp:
	  - Probably fixed some issues that might arise with sending to
	    chats.

Thu Jul 31 01:07:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Require libglib2.0 and libgaim.

Thu Jul 31 00:57:56 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkstuff.conf:
	  - Updated to version 0.1.0 release.

Thu Jul 31 00:56:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - One button was disabled when it shouldn't have been, and another
	    was enabled when it shouldn't have been. Fixed.

Wed Jul 30 23:11:22 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	  - Accounts set to auto-login no longer crash.

Wed Jul 30 23:04:12 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/main.cpp:
	  - Added auto-login.
	  - The correct path to the protocol plugins should now be set.

Wed Jul 30 22:47:06 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Double-clicking (or double-tapping) a buddy now starts an IM with
	    them.

Wed Jul 30 22:43:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp: